# entrevistas-bachillerato

./: .gitignore  Dockerfile  LICENSE  README.md  devlog.md  pyproject.toml
assets/css/: diad-bootstrap.css  diad-bootstrap.css.map  diad-bootstrap.min.css  diad-bootstrap.min.css.map
assets/pdfjs/web/: debugger.css  debugger.mjs  viewer.css  viewer.html  viewer.min.mjs  viewer.mjs
src/: crud.py  main.py  models.py
templates/: base.tpl.html  calificar.tpl.html  cargar-evaluados.tpl.html  cargar-fichas.tpl.html  cargar-usuarios.tpl.html  criterios.html  criterios.tpl.html  error.tpl.html  evaluado.tpl.html  ficha.tpl.html  forbidden.tpl.html  index.tpl.html  listado-a-calificar.tpl.html  listado-evaluados.tpl.html  listado-fichas.tpl.html  listado-usuarios.tpl.html  login.tpl.html  reporte-estado.tpl.html  reporte-resultados.tpl.html  usuario.tpl.html
