[project]
name = "entrevistas-bachillerato"
version = "0.1.0"
description = "Sistema para calificación de entrevistas de bachillerato"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]==2.11.9",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.31",
]
