[project]
name = "entrevistas-bachillerato"
version = "0.1.0"
description = "Sistema para calificación de entrevistas de bachillerato"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.37",
]
