[project]
name = "entrevistas-bachillerato"
version = "0.1.0"
description = "Sistema para calificación de entrevistas de bachillerato"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart]>=0.136.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
]
